--- a/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
+++ b/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
@@ -80,6 +80,7 @@ html, body {
     font-size: 16px;
     width: 100px;
     margin-top: 15px;
+    margin-left: 60px;
   }
   
   .lbutton[type="submit"]:hover {
