--- a/frontend/myapp/src/registrar_dashboard/components/pending.module.css
+++ b/frontend/myapp/src/registrar_dashboard/components/pending.module.css
@@ -5,14 +5,14 @@
     z-index: 10; 
     width: 100%;
     height: 100%;
-    border-radius: 3px;
+    border-radius: 10px;
     overflow-y: auto;
 }
 
 .output_box {
     width: 96%;
     border-radius: 3px;
-    height: 150px;
+    height: 100px;
     border: 2px solid rgb(107, 105, 105);
     padding: 10px;
     background-color: #f8f8f8;
@@ -32,14 +32,21 @@
     font-size: 2rem;
     margin-top: 250px;
 }
+
 .pa{
-  
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-right: 40px;
 }
+
 .thebut {
     color: white;
     background-color: red;
     border: none;
+    font-weight: bold;
     border-radius: 3px;
+    height: 35px;
+    width: 90px;
     position: absolute;
     right: 10px;
     top: 15px;
@@ -58,7 +65,7 @@
   .popup {
     position: fixed;
     z-index: 1001;
-    background: white;
+    background: rgb(255, 255, 255);
     padding: 20px;
     border-radius: 8px;
     top: 50%;
@@ -94,6 +101,11 @@
   position: relative;
   top: 10%;
   left: 30%;
+  width: 20%;
+  height: 20%;
+  border-radius: 5px;
+  font-weight: bold;
+  border: none;
   cursor: pointer;
   color: white;
 }
@@ -103,6 +115,11 @@
   position: relative;
   top: 10%;
   left: 35%;
+  width: 20%;
+  height: 20%;
+  border-radius: 5px;
+  font-weight: bold;
+  border: none;
   cursor: pointer;
   color: white;
 }
