--- a/frontend/myapp/src/registrar_dashboard/components/issue_his.module.css
+++ b/frontend/myapp/src/registrar_dashboard/components/issue_his.module.css
@@ -1,19 +1,21 @@
 .container {
-    background-color: rgba(255, 255, 255, 0);
-    position: absolute;
-    box-shadow: 0px 10px 20px #718c8e;
-    z-index: 10; 
-    width: 100%;
-    height: 100%;
-    border-radius: 3px;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
+.pageTitle {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 25px;
+  color: #2d3748;
+  text-align: left;
+}
 
-.container p {
-    text-align: center;
-    font-weight: bold;
-    font-size: 2rem;
-    margin-top: 250px;
+.complaintsGrid {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .output_box {
