--- a/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
+++ b/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
@@ -87,6 +87,28 @@ html, body {
     opacity: 0.8;
   }
   
+  .lbutton:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
+
+  .spinner {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    border-top: 3px solid #3298db;
+    animation: spin 1s linear infinite;
+    vertical-align: middle;
+
+  }
+
+  @keyframes spin {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+  }
+  
   /* Form Switch Styles */
   .form_switch {
     margin-top: 20px;
