add a show password component

--- a/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
+++ b/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
@@ -142,4 +142,24 @@ html, body {
     text-decoration: underline;
   }
   
-  
+  .passwordInputWrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.passwordInput {
+  width: 100%;
+  padding-right: 2.5rem;
+}
+
+.showPasswordButton {
+  position: absolute;
+  right: 0.5rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #888;
+  outline: none;
+}
